--- a/views/pages/index2.ejs
+++ b/views/pages/index2.ejs
@@ -414,7 +414,7 @@
                   href="/charts"
                   aria-expanded="false"
                   ><i class="mdi mdi-chart-bar"></i
-                  ><span class="hide-menu">Charts</span></a
+                  ><span class="hide-menu">Chart's</span></a
                 >
               </li>
               <li class="sidebar-item">
