--- a/views/pages/error-404.ejs
+++ b/views/pages/error-404.ejs
@@ -57,7 +57,7 @@
             YOU SEEM TO BE TRYING TO FIND HIS WAY HOME
           </p>
           <a
-            href="index.html"
+            href="/index"
             class="
               btn btn-danger btn-rounded
               waves-effect waves-light
